<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Awesome Finance Planner</string>
    <string name="overview">Overview</string>
    <string name="synchronize">Synchronize</string>
    <string name="transactions">Transactions</string>
    <string name="categories">Categories</string>
    <string name="category_name">Category name</string>
    <string name="category_icon">Category icon</string>
    <string name="icon">Icon</string>
    <string name="transactions_no_items">No transactions to display</string>
    <string name="wait">Synchronizing transactions...</string>
    <string name="icon_prompt">Choose an icon</string>
    <string name="category_prompt">Choose a category</string>
    <string name="last_synchronized">Synchronized</string>
    <string name="internal_t_count">Transactions</string>
    <string name="internal_tag_count">Tags</string>
    <string name="not_synchronized">Never</string>
    <string name="transaction_text">Text</string>
    <string name="transaction_date">Date</string>
    <string name="transaction_amount">Amount</string>
    <string name="transaction_change_date">Change date</string>
    <string name="transaction_average">Average consumption</string>
    <string name="per_day">Per day</string>
    <string name="per_week">Per week</string>
    <string name="last_transactions">Last transactions</string>
    <string name="category">Category</string>
    <string name="please_wait">Please wait...</string>
    <string name="retrieving_date">Retrieving data ...</string>
    <string name="invalid_amount">Invalid amount</string>
    <string name="transaction_updated">Transaction updated</string>
    <string name="unsynced_count">Changes not synchronized</string>
    <string name="clear_db">Clear internal database</string>
    <string name="db_cleared">Internal database has been emptied</string>
    <string name="untagged_count">Not tagged</string>
    <string name="suggested_tag">Suggested tag</string>
    <string name="notification_title">New transaction!</string>
    <string name="server_unavailable">Could not synchronize. Server is
        unavailable.
    </string>
    <string name="confirm">OK</string>
    <string name="notification">You have %s new transaction(s)</string>
    <string name="not_tagged">Ukategorisert</string>
    <string name="auto_tag">There are %s other transaction(s) that matches this one. Do you want to tag them aswell?
    </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="invalid_tag_name">Invalid tag name</string>
    <string name="transaction_added">Transaction added</string>
</resources>
